translation-tool/inputs/source_meta/objects/Brazil_Button_Links__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom settings will be having all the links for button present in the new Vf pages</description>
    <fields>
        <fullName>Show_in_Cow__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show in Cow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_in_Pow__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show in Pow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_in_Self_Care__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show in Self Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>Links for buttons present in vf page</description>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Brazil Button Links</label>
</CustomObject>